<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/preferences_dialog_layout" android:orientation="vertical"
	android:layout_width="250dp" android:layout_height="260dp"
	android:background="@color/dialog" android:padding="10dp">
	<LinearLayout android:id="@+id/auto_update_layout"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dp">
		<TextView android:id="@+id/auto_update_text"
			android:layout_width="wrap_content" android:width="150dp"
			android:layout_height="wrap_content" android:text="@string/auto_update_text" />
		<ToggleButton android:id="@+id/auto_update_selection"
			android:layout_gravity="center" android:textOn="ON" android:textOff="OFF"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:id="@+id/auto_update_timer_layout"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dp">
		<TextView android:id="@+id/auto_update_timer_text"
			android:text="@string/auto_update_timer_text" android:width="150dp"
			android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
		<EditText android:id="@+id/auto_update_timer_edit"
			android:lines="1" android:numeric="integer" android:layout_width="fill_parent"
			android:maxLength="3" android:layout_gravity="center"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<Button android:id="@+id/preferences_button" android:text="@string/preference_button_label"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginTop="10px" android:layout_gravity="center" />
</LinearLayout>